samples/_failures_safe/1761608761_75403a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b232b64a.c: In function ‘read_operator’:
./samples/SAFE/__tmp_b232b64a.c:151:10: error: expected expression at end of input
  151 |          (buffer[0] == '>' && lexer->input[lexer->position] ==
      |          ^
./samples/SAFE/__tmp_b232b64a.c:151:10: error: expected declaration or statement at end of input
